# rag_playas

./: .env.example  .gitignore  Makefile  README.md  package.json  prompts_rag_jurisprudencia_playas_v2.md  pyproject.toml  rag-quality-analysis.md
.github/workflows/: ci.yml  tests.yml
docs/: DOCUMENT_SECTIONS.md  architecture.md  metadata_retrieval_improvements.md  performance-improvements.md  query-enrichment-architecture.md
evaluation/: ragas_eval_gemma.py  ragas_eval_ollama.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/hooks/: useChat.ts
frontend/lib/: api.ts  types.ts
infrastructure/: .gitignore  locals.tf  main.tf  outputs.tf  variables.tf
ingest/: config.py  loaders.py  metadata_csv.py  normalize.py  pyproject.toml  s3_client.py  sections.py  splitter_and_enrich.py  utils.py
ingest/pdf_to_md/: __init__.py  cleaner.py  config.py  images.py  layout.py  models.py  pipeline.py  profiler.py  quality.py  segmenter.py  text_cleanup.py
rag/: config.py  pyproject.toml  s3_client.py
rag/api/: main.py  schemas.py
rag/core/: embeddings.py  generator.py  query_enricher.py  retriever.py  vectorstore.py
scripts/: ec2_chroma_db.sh  ec2_ollama_embeddings.sh  run_data_pipeline.sh  run_pipeline.sh
src/: config.py
src/frontend/: gradio_app.py
src/ingest/: loaders.py  normalize.py  pdf_to_md.py  sections.py  splitter_and_enrich.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_generator.py  test_normalize.py  test_splitter.py  test_vectorstore.py
utils/: chroma_clear.py  chroma_count.py
(+27 files in other folders)
